--- a/SpringBank/src/main/resources/application.properties
+++ b/SpringBank/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.application.name=SpringBank
+spring.jmx.default-domain=SpringBank
+server.port=8080
+spring.jpa.show-sql=true
+
+#management.endpoints.web.exposure.include=*
+#management.endpoint.shutdown.enabled=false
+#management.endpoint.restart.enabled=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/SpringBank
+spring.datasource.username=postgres
+spring.datasource.password=xxxxxxxxxxx
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
 
