[SpringBank] removed conflicts

--- a/SpringBank/src/main/resources/application.properties
+++ b/SpringBank/src/main/resources/application.properties
@@ -6,10 +6,10 @@ spring.jpa.show-sql=true
 #management.endpoints.web.exposure.include=*
 #management.endpoint.shutdown.enabled=false
 #management.endpoint.restart.enabled=true
-
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 spring.datasource.url=jdbc:postgresql://localhost:5432/SpringBank
 spring.datasource.username=postgres
-spring.datasource.password=xxxxxxxxxxx
+spring.datasource.password=zaffira97
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 
