--- a/SpringBank/src/main/resources/application.properties
+++ b/SpringBank/src/main/resources/application.properties
@@ -13,3 +13,18 @@ spring.datasource.password=zaffira97
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 
+# Resiliece4j Configuration
+resilience4j.circuitbreaker.configs.default.sliding-window-size=10
+resilience4j.circuitbreaker.configs.default.sliding-window-type=TIME_BASED
+resilience4j.circuitbreaker.configs.default.failure-rate-threshold=50
+resilience4j.circuitbreaker.configs.default.wait-duration-in-open-state=5s
+
+resilience4j.timelimiter.configs.default.timeout-duration=5s
+resilience4j.timelimiter.configs.default.cancel-running-future=true
+
+resilience4j.bulkhead.configs.bulkconf.max-wait-duration=5s
+resilience4j.bulkhead.configs.bulkconf.writable-stack-trace-enabled=true
+
+resilience4j.bulkhead.instances.restBulk.base-config=bulkconf
+resilience4j.circuitbreaker.instances.restBreaker.base-config=default
+resilience4j.timelimiter.instances.restTimeLimiter.base-config=default
